--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.HomeActivity"
+            android:exported="false">
+        </activity>
+        <activity android:name=".ui.BookListActivity" />
+        <activity android:name=".ui.CartActivity" />
+        <activity android:name=".ui.CheckoutActivity" />
+        <activity android:name=".ui.HistoryActivity" />
+        <activity 
+            android:name=".ui.LoginActivity" 
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.BookListActivity" />
-        <activity android:name=".ui.CartActivity" />
-        <activity android:name=".ui.CheckoutActivity" />
-        <activity android:name=".ui.HistoryActivity" />
-        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.MainActivity"/>
 
